--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  firebase_core: ^0.7.0
-  firebase_auth: ^0.20.0+1
-  cloud_firestore: ^0.16.0
-  image_picker: ^0.6.7+22
-  firebase_storage: ^7.0.0
+  firebase_core: ^1.10.3
+  firebase_auth: 2.0.0
+  cloud_firestore: ^1.0.0
+  image_picker: ^0.8.1+4
+  firebase_storage: ^8.0.0
   google_sign_in: ^4.5.9
-  flutter_facebook_auth: ^2.0.1
+  flutter_facebook_auth: ^4.1.1
 
 dev_dependencies:
   flutter_test:
